# Sudoku-Solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example_board.csv  flake.nix
.helix/: languages.toml
console/: CMakeLists.txt
console/src/: main.cpp
gui/: CMakeLists.txt  Main.qml
gui/src/: main.cpp  sudoku.cpp  sudoku.hpp
lib/: CMakeLists.txt
lib/src/: board.hpp  constants.hpp  game.hpp  helper.cpp  helper.hpp
src/: board.cpp  board.h  board.hpp  constants.hpp  field.h  fieldContainer.cpp  fieldContainer.h  fieldContainer.hpp  game.cpp  game.hpp  main.cpp
src/tests/: board_test.cpp  fieldcontainer_test.cpp  game_test.cpp
tests/: CMakeLists.txt
tests/src/: board_test.cpp  game_test.cpp
